<resources>
    <string name="app_name">Eqvola Present</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_promo_code">Promo code</string>

    <string name="prompt_city">City</string>
    <string name="prompt_street">Street</string>
    <string name="prompt_state">State</string>
    <string name="prompt_phone_number">Phone number</string>
    <string name="prompt_phone_code">Phone code</string>
    <string name="prompt_postal_code">Postal code</string>
    <string name="prompt_birth_date">Birth date</string>

    <string name="account_was_created">Account was created.</string>
    <string name="account_register_info">Thank you for registering. A confirmation letter has been sent to your email address. Input code or click the link in the email for confirm the email address.</string>
    <string name="account_login_email_not_approved">Your email has not been confirmed. Input code or click the link in the email for confirm the email address.</string>

    <string name="account_two_step_auth">Two step authentication! Pass your submit code!</string>

    <string name="registation_error">Error</string>

    <string name="label_next">Next</string>

    <string name="navigation_my_accounts">My accounts</string>
    <string name="navigation_create_account">Create account</string>
    <string name="navigation_withdrawal">Withdrawal</string>
    <string name="navigation_finance_history">Finance history</string>
    <string name="navigation_transfers">My Transfers</string>
    <string name="navigation_trader">Mobile trader</string>
    <string name="navigation_support">Support</string>
    <string name="navigation_menu">Menu</string>
    <string name="nav_logout">Logout</string>

    <string name="action_reset">Reset</string>
    <string name="action_log_in">Login</string>
    <string name="action_prev">Prev</string>
    <string name="action_next">Next</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_registration">Registration</string>


    <string name="error_invalid_name">This name is invalid</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">The password must contain upper and lower case letters and numbers.(Min length 8 characters)</string>
    <string name="error_incorrect_data">This email or password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_password_do_not_match">Passwords do not match</string>
    <string name="error_email_already_use">This email is already use</string>
    <string name="error_phone_number">Wrong phone number</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="url">http://api.cabinet.eqvola.org/account/login</string>
    <string name="action_registr">Registr</string>
    <string name="cancel_registration">Cancel</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="save_changes">Save</string>
    <string name="create_account">Create</string>

    <string name="user_page_name">Name</string>
    <string name="user_page_city">City</string>
    <string name="user_page_street">Street</string>
    <string name="user_page_state">State</string>
    <string name="user_page_phone_number">Phone number</string>
    <string name="user_page_phone_code">Phone code</string>
    <string name="user_page_postal_code">Postal code</string>
    <string name="user_page_birth_date">Birth date</string>

    <string name="support_create_ticket_subject">Subject</string>
    <string name="support_create_ticket_text">Text</string>
    <string name="support_create_ticket_send">Send</string>

    <string name="support_chat_message_send">Send</string>

    <string name="date_format">yyyy-MM-dd HH:mm:ss</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_my_accounts">My accounts</string>
    <string name="title_finance_history">Finance history</string>
    <string name="title_support">Support</string>
    <string name="title_create_account">Create account</string>
    <string name="title_menu">Menu</string>
    <string name="title_logout">Logout</string>

    <string name="create_order_bid">Bid</string>
    <string name="create_order_ask">Ask</string>
    <string name="create_order_sell">Sell</string>
    <string name="create_order_buy">Buy</string>
    <string name="create_order_set_an_order">Set an order</string>
    <string name="create_order_stop_loss">Stop loss</string>
    <string name="create_order_take_profit">Take profit</string>
    <string name="create_order_comment">Comment</string>
    <string name="create_order_volume">Volume</string>
    <string name="create_order_balance">Balance</string>
    <string name="create_order_price">Price</string>
    <string name="create_order_expiration">Expiration</string>
    <string name="create_order_marke_execution">Market execution</string>
    <string name="create_order_deferred_order">Deferred order</string>

    <string name="order_account_login">Account</string>
    <string name="order_account_balance">Balance</string>
    <string name="order_symbol">Symbol</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
