<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.eqvol.eqvola.fragments.SupportCreateTicket"
    android:id="@+id/support_create_ticket_form">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Spinner
                android:id="@+id/support_create_ticket_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/support_create_ticket_subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/support_create_ticket_subject"
                    android:maxLines="1"
                    android:imeOptions="actionGo"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/support_create_ticket_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/support_create_ticket_text"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/support_create_ticket_btnSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/support_create_ticket_send"/>
        </LinearLayout>
    </ScrollView>


</FrameLayout>
