<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left"
    android:orientation="vertical">
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/user_page_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:text="user_name"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:inputType="text"
                            android:maxLines="1"
                            android:imeOptions="actionGo"
                            android:hint="@string/user_page_name"/>
                </android.support.design.widget.TextInputLayout>
                <Spinner
                    android:id="@+id/spinnerCountries"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                        <TextView
                            android:id="@+id/user_page_phone_code"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:text="user_birth_date"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>
                        <EditText android:id="@+id/user_page_phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:text="user_birth_date"
                            android:maxLines="1"
                            android:inputType="number"
                            android:imeOptions="actionGo"
                            android:maxLength="9"

                            android:textAppearance="?android:attr/textAppearanceLarge"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                        <Spinner
                            android:id="@+id/spinnerDay"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"/>
                        <Spinner
                            android:id="@+id/spinnerMonth"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"/>
                        <Spinner
                            android:id="@+id/spinnerYear"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"/>
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/user_page_city"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:text="user_birth_date"
                            android:maxLines="1"
                            android:inputType="text"
                            android:imeOptions="actionGo"
                            android:hint="@string/user_page_city"


                            android:textAppearance="?android:attr/textAppearanceLarge"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/user_page_state"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:text="user_birth_date"
                            android:maxLines="1"
                            android:inputType="text"
                            android:imeOptions="actionGo"
                            android:hint="@string/user_page_state"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/user_page_street"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:text="user_birth_date"
                            android:maxLines="1"
                            android:inputType="text"
                            android:imeOptions="actionGo"
                            android:hint="@string/user_page_street"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/user_page_postal_code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:text="user_birth_date"
                            android:maxLines="1"
                            android:inputType="number"
                            android:imeOptions="actionGo"
                            android:maxLength="9"
                            android:hint="@string/user_page_postal_code"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>
                </android.support.design.widget.TextInputLayout>
                <Button
                    android:id="@+id/btnSave"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save_changes"
                    android:textStyle="bold"
                    android:width="100dp"
                    android:height="60dp"
                    android:layout_gravity="bottom"/>
        </LinearLayout>
</ScrollView>
</LinearLayout>